add: este ya creo que sí

--- a/empleados/src/main/resources/templates/gestionEtiquetas.html
+++ b/empleados/src/main/resources/templates/gestionEtiquetas.html
@@ -225,7 +225,7 @@
                     if (hiddenInput) hiddenInput.value = '';
                     return;
                 }
-                fetch("/empleados/empleados/etiquetado/api/empleado/${empleadoId}/etiquetas").then(response => {
+                fetch(`/empleados/empleados/etiquetado/api/empleado/${empleadoId}/etiquetas`).then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok: ' + response.statusText);
                     }
